--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,12 +20,19 @@ services:
       options:
         max-size: "5m"
         max-file: "2"
-    depends_on:
-      - ollama
     extra_hosts:
       - "host.docker.internal:host-gateway"
     networks:
       - ollama-net
+    depends_on:
+      neo4j-mcp:
+        condition: service_healthy
+      pyghidra-mcp:
+        condition: service_healthy
+      angr-mcp:
+        condition: service_started
+      ollama:
+        condition: service_started
     restart: unless-stopped
     
   ollama:
@@ -57,6 +64,11 @@ services:
     networks:
       - ollama-net
     restart: unless-stopped
+    # healthcheck:
+    #   test: ["CMD", "curl", "-Lf", "http://localhost:11434/"]
+    #   interval: 30s
+    #   timeout: 3s
+    #   retries: 30
     
   watchtower:
     image: ghcr.io/nicholas-fedor/watchtower:latest
@@ -74,13 +86,47 @@ services:
     image: neo4j
     container_name: neo4j
     environment:
-      - NEO4J_AUTH=neo4j/iesha8aeMohjahchah4v
+      - "NEO4J_AUTH=neo4j/iesha8aeMohjahchah4v"
+      - "NEO4J_apoc_export_file_enabled=true"
+      - "NEO4J_apoc_import_file_enabled=true"
+      - "NEO4J_apoc_import_file_use__neo4j__config=true"
+      - "NEO4J_PLUGINS=[\"apoc\"]"
     ports:
       - "7474:7474"
       - "7687:7687"
     networks:
       - ollama-net
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "-O", "-", "-q", "http://localhost:7474/"]
+      interval: 30s
+      timeout: 3s
+      retries: 30
+
+  neo4j-mcp:
+    build: ./neo4j-mcp
+    container_name: neo4j-mcp
+    environment:
+      - "NEO4J_URI=neo4j://neo4j:7687"
+      - "NEO4J_USERNAME=neo4j"
+      - "NEO4J_PASSWORD=iesha8aeMohjahchah4v"
+      - "NEO4J_DATABASE=neo4j"
+      - "NEO4J_READ_ONLY=false"
+      - "NEO4J_TELEMETRY=true"
+    ports:
+      - "8004:80"
+    networks:
+      - ollama-net
+    restart: unless-stopped
+    depends_on:
+      neo4j:
+        condition: service_healthy
+
+    healthcheck:
+      test: ["CMD", "curl", "-Lf", "http://localhost/openapi.json"]
+      interval: 30s
+      timeout: 3s
+      retries: 30
 
   pyghidra-mcp:
     build: ./pyghidra-mcp
@@ -92,7 +138,7 @@ services:
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-Lf", "http://localhost/openapi.json"]
-      interval: 60s
+      interval: 30s
       timeout: 3s
       retries: 30
 
@@ -104,11 +150,11 @@ services:
     networks:
       - ollama-net
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-Lf", "http://localhost/openapi.json"]
-      interval: 60s
-      timeout: 3s
-      retries: 30
+    # healthcheck:
+    #   test: ["CMD", "curl", "-Lf", "http://localhost/openapi.json"]
+    #   interval: 30s
+    #   timeout: 3s
+    #   retries: 30
 
 
 volumes:
